2009-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: let VERBOSE=yes output appear before summary.
	* lib/am/check.am ($(TEST_SUITE_LOG)): In `VERBOSE=yes' mode,
	output contents of `$(TEST_SUITE_LOG)' before, rather than after
	the test suite summary.  This ensures that the email address
	appears near the end of the output; also, the log file already
	starts with a result summary anyway.

	parallel-tests: `clean recheck' should not rerun all tests.
	* lib/am/check.am (recheck, recheck-html): Do not rerun all
	tests if `$(TEST_SUITE_LOG)' does not exist.
	* tests/parallel-tests2.test: Adjust recheck test.
	* tests/parallel-tests9.test: Adjust recheck-html test.
	* NEWS: Update.
	Suggestion by Akim Demaille.

2009-04-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Eric Blake <ebb9@byu.net>

	parallel-tests: Fix driver for nonempty executable extension.
	* automake.in (handle_tests): New substitution `%am__EXEEXT%',
	defined as 'FALSE' for non-generic rules, or if no programs are
	built at all.  Otherwise, define it as configure conditional.
	* lib/am/check2.am [%am__EXEEXT%] (%EXT%$(EXEEXT).log): New
	conditional generic rule.
	* m4/init.m4: Hook an m4_provide of `_AM_COMPILER_EXEEXT' onto
	Autoconf's `_AC_COMPILER_EXEEXT' macro.
	(AM_INIT_AUTOMAKE): If `_AM_COMPILER_EXEEXT' has been provided
	at `AC_CONFIG_COMMANDS_PRE' time, then introduce a conditional
	`am__EXEEXT', defined to true iff `$EXEEXT' is nonempty.
	* tests/check5.test: Only match `_EXEEXT_[1-9]' here, to avoid
	false positives stemming from `@am__EXEEXT_TRUE@'.
	* NEWS: Update.

2009-04-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix a couple of $(EXEEXT)-related testsuite failure.
	* tests/check8.test: Allow executable extensions in test suite
	output.
	* tests/check9.test: Add `$(EXEEXT)' manually to @substituted@
	XFAIL_TESTS entries.

	* NEWS: Update for last patch.

2009-04-07  Florian Briegel  <briegel@zone42.de>  (tiny change)
	    Stepan Kasal  <skasal@redhat.com>