@@ -1,5 +1,9 @@
 2009-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	parallel-tests: more testsuite exposure.
+	* tests/parallel-tests.test: Also test overriding TEST_LOGS and
+	TESTS.
+
 	parallel-tests: let VERBOSE=yes output appear before summary.
 	* lib/am/check.am ($(TEST_SUITE_LOG)): In `VERBOSE=yes' mode,
 	output contents of `$(TEST_SUITE_LOG)' before, rather than after
